The version number is hardcoded into sdparm.c (in a C string);
the rpm spec file: sdparm.spec ; the debian/changelog file;
and the configure.ac file (in the AC_INIT item).

ChangeLog for sdparm-1.10 [20160202] [svn: r276]
  - add IO advice hints grouping mode page (sbc4r06, 8)
  - add --inhex=FN option for decoding without device present,
    FN is interpreted as response to mode sense(10) command
  - add --pdt=PDT option for use with --inhex=FN
  - --quiet used twice hides changeable, default + saved
  - add Unit serial number VPD page specific sanity check
  - add NO_PI_CHK to Supported block lengths and protection
    types VPD page
  - add Background operation control mpage
  - Read-write error recovery mpage: add Misaligned writes
    reporting field (MWR)
  - add Block limits extension VPD page
  - add Device constituents VPD page
  - LB provisioning VPD page: expand LBPRZ, add Minimum and
    Threshold percentage fields
  - device identification VPD page: add decoding for locally
    assigned UUIDs (15-267r2)
  - the --inhex=FN option together with --inquiry decodes
    FN as a single VPD page
  - sync to spc5r08 and sbc4r10
  - add SAS G5 (22.5 Gbps) settings [anticipate t10 additions]
  - point svn:externals to rev 658 of sg3_utils
  - upgrade automake to version 1.14.1 (U14.10)
  - autogen.sh: upgrade to buildconf 20091223 version

ChangeLog for sdparm-1.09 [20141226] [svn: r257]
  - decode Third Party Copy VPD page
  - Supported block lengths and protection types (sbc4r01) +
    Block device characteristics extension VPD pages added
  - zoned block device characterics VPD page added (zbc-r01c)
  - fix manufacturer-assigned serial number VPD page length
  - device id VPD: T10 vendor identification designator clean up
  - block device characteristics VPD: add ZONED (sbc4r04)
  - SAS/SPL disconnect-reconnect mpage: expand
  - SAS protocol specific port mpage: add MAXR field (spl4r01)
  - standard inquiry response (sinq): add LU_CONG