@@ -2,7 +2,7 @@ The version number is hardcoded into sdparm.c (in a C string);
 the rpm spec file: sdparm.spec ; the debian/changelog file;
 and the configure.ac file (in the AC_INIT item).
 
-ChangeLog for sdparm-1.10 [20160202] [svn: r276]
+ChangeLog for sdparm-1.10 [20160209] [svn: r277]
   - add IO advice hints grouping mode page (sbc4r06, 8)
   - add --inhex=FN option for decoding without device present,
     FN is interpreted as response to mode sense(10) command
@@ -14,6 +14,7 @@ ChangeLog for sdparm-1.10 [20160202] [svn: r276]
   - add Background operation control mpage
   - Read-write error recovery mpage: add Misaligned writes
     reporting field (MWR)
+  - sync tape mpages with ssc5r02
   - add Block limits extension VPD page
   - add Device constituents VPD page
   - LB provisioning VPD page: expand LBPRZ, add Minimum and
@@ -24,7 +25,7 @@ ChangeLog for sdparm-1.10 [20160202] [svn: r276]
     FN as a single VPD page
   - sync to spc5r08 and sbc4r10
   - add SAS G5 (22.5 Gbps) settings [anticipate t10 additions]
-  - point svn:externals to rev 658 of sg3_utils
+  - point svn:externals to rev 661 of sg3_utils
   - upgrade automake to version 1.14.1 (U14.10)
   - autogen.sh: upgrade to buildconf 20091223 version
 
